0.4		UNRELEASED

 CHANGES

  * Changed license from GPLv2 or later to GPLv3 or later.

 BUG FIXES

  * Fix compatibility with Bazaar 1.6. 

  * Fixed overactive assertion. (#242245)

 ENHANCEMENTS

  * Set author property to preserve committer and original author of the 
    commit.  (Lukáš Lalinský)

  * Add new option --pending-merges for rebasing pending merges after 
    "bzr up". (#162622)

0.3		2007-12-06

 ENHANCEMENTS

  * "bzr replay" now supports revision ranges.

  * Don't require any of the commands to be run in 
    the branch root.

  * Give preference to push location when no upstream location 
    is specified.

  * Make message when there is nothing to rebase a 
    bit friendlier.

 BUG FIXES

  * Fix "bzr replay", add test.

0.2		2007-10-19

 BUG FIXES

  * Raise exception about pending changes /before/ writing plan. 
    (#144407)

  * Use better merge bases (#144033)

  * Give proper warning when there is no common base. (#144401)

  * Support the -r argument to rebase.

  * Add --dry-run option to rebase command. 

  * Fix compatibility with Bazaar 0.92.
   (#144031)

  * Store parents correctly.
 
 FEATURES

  * Skip double merges by default, unless specified otherwise. (#126743)

  * Check for incompatible Bazaar functions.

  * Add replay command.

0.1 	2007-07-15

 * Initial release.