@@ -10,6 +10,8 @@
 
   * Fixed overactive assertion. (#242245)
 
+  * Fixed O(history) access during plan creation (Robert  Collins, lp:#249823).
+
  ENHANCEMENTS
 
   * Set author property to preserve committer and original author of the 
